# polhemus_fastrak_driver

./: CMakeLists.txt  package.xml
.kdev4/: fastrak_mocap_driver.kdev4  polhemus_fastrak_driver.kdev4
Documents/experiment/first/: experiment.m  f_Polh_tf.txt  f_ts_data.txt  f_ts_pose.txt  octave-workspace
Documents/experiment/fourth/: experiment.m  fo_Polh_tf.txt  fo_ts_data.txt  fo_ts_pose.txt
Documents/experiment/second/: experiment.m  s_Polh_tf.txt  s_ts_data.txt  s_ts_pose.txt
Documents/experiment/third/: experiment.m  t_Polh_tf.txt  t_ts_data.txt  t_ts_pose.txt
calibration_node/: CMakeLists.txt  package.xml
calibration_node/msg/: pointError.msg
calibration_node/src/: calibration_node.cpp
catkin_ws/: readme
catkin_ws/src/fastrak_mocap_driver/: CMakeLists.txt  package.xml
catkin_ws/src/fastrak_mocap_driver/include/: fastrak_serialport.h  fastrak_serialport.h~
catkin_ws/src/fastrak_mocap_driver/launch/: fastrak_mocap_driver.launch  fastrak_mocap_driver.launch~
catkin_ws/src/fastrak_mocap_driver/src/: allSensorRead.cpp  allSensorRead.cpp~  fastrak_serialport.cpp  fastrak_serialport.cpp~
catkin_ws/src/fastrak_mocap_driver/tools/: README
driver/: CMakeLists.txt  Readme.txt  polhemus_fastrak_driver.kdev4
driver/tools/: initFastrak.sh
include/: fastrak_serialport.h  fastrak_serialport.h~
launch/: experiment.launch  experiment.launch~  fastrak_mocap_driver.launch  fastrak_mocap_driver.launch~
src/: allSensorRead.cpp  allSensorRead.cpp~  fastrak.cpp  fastrak_serialport.cpp  fastrak_serialport.cpp~  main.cpp
tools/: distanceCalibration.txt
