<?xml version="1.0"?>
<package>
  <name>fastrak_mocap_driver</name>
  <version>0.0.0</version>
  <description>The fastrak_mocap_driver package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <author>eohan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>calibration</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>calibration</run_depend>

  <export>

  </export>
</package>
