<?xml version="1.0"?>
<package>
  <name>polhemus_fastrak_driver</name>
  <version>0.0.0</version>
  <description>The polhemus_fastrak_driver package</description>

  <maintainer email="diosdado100591@hotmail.com"></maintainer>

  <author>Jorge Diosdado</author>
  <author>Pushkar Kolhe</author>
  <author>Eohan George</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>calibration</build_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>leica_ts12</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>calibration</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>leica_ts12</run_depend>

  <export>

  </export>
</package>
