<?xml version="1.0"?>
<package>
  <name>fastrak_mocap_driver</name>
  <version>0.0.0</version>
  <description>The fastrak_mocap_driver package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <author>eohan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
